Change "Follow 7 people" to "Find at least 7 people to follow" in web UI

--- a/app/javascript/mastodon/locales/defaultMessages.json
+++ b/app/javascript/mastodon/locales/defaultMessages.json
@@ -61,28 +61,28 @@
         "id": "account.requested"
       },
       {
-        "defaultMessage": "Unblock @{name}",
-        "id": "account.unblock"
+        "defaultMessage": "Unblock",
+        "id": "account.unblock_short"
       },
       {
-        "defaultMessage": "Unmute @{name}",
-        "id": "account.unmute"
+        "defaultMessage": "Unmute",
+        "id": "account.unmute_short"
       },
       {
-        "defaultMessage": "Mute notifications from @{name}",
-        "id": "account.mute_notifications"
+        "defaultMessage": "Mute notifications",
+        "id": "account.mute_notifications_short"
       },
       {
-        "defaultMessage": "Unmute notifications from @{name}",
-        "id": "account.unmute_notifications"
+        "defaultMessage": "Unmute notifications",
+        "id": "account.unmute_notifications_short"
       },
       {
-        "defaultMessage": "Mute @{name}",
-        "id": "account.mute"
+        "defaultMessage": "Mute",
+        "id": "account.mute_short"
       },
       {
-        "defaultMessage": "Block @{name}",
-        "id": "account.block"
+        "defaultMessage": "Block",
+        "id": "account.block_short"
       }
     ],
     "path": "app/javascript/mastodon/components/account.json"
@@ -3232,11 +3232,11 @@
         "id": "onboarding.steps.setup_profile.body"
       },
       {
-        "defaultMessage": "Follow {count, plural, one {one person} other {# people}}",
+        "defaultMessage": "Find at least {count, plural, one {one person} other {# people}} to follow",
         "id": "onboarding.steps.follow_people.title"
       },
       {
-        "defaultMessage": "You curate your own feed. Lets fill it with interesting people.",
+        "defaultMessage": "You curate your own home feed. Lets fill it with interesting people.",
         "id": "onboarding.steps.follow_people.body"
       },
       {
