--- a/app/javascript/mastodon/locales/en.json
+++ b/app/javascript/mastodon/locales/en.json
@@ -17,6 +17,7 @@
   "account.badges.group": "Group",
   "account.block": "Block @{name}",
   "account.block_domain": "Block domain {domain}",
+  "account.block_short": "Block",
   "account.blocked": "Blocked",
   "account.browse_more_on_origin_server": "Browse more on the original profile",
   "account.cancel_follow_request": "Withdraw follow request",
@@ -48,7 +49,8 @@
   "account.mention": "Mention @{name}",
   "account.moved_to": "{name} has indicated that their new account is now:",
   "account.mute": "Mute @{name}",
-  "account.mute_notifications": "Mute notifications from @{name}",
+  "account.mute_notifications_short": "Mute notifications",
+  "account.mute_short": "Mute",
   "account.muted": "Muted",
   "account.open_original_page": "Open original page",
   "account.posts": "Posts",
@@ -65,7 +67,7 @@
   "account.unendorse": "Don't feature on profile",
   "account.unfollow": "Unfollow",
   "account.unmute": "Unmute @{name}",
-  "account.unmute_notifications": "Unmute notifications from @{name}",
+  "account.unmute_notifications_short": "Unmute notifications",
   "account.unmute_short": "Unmute",
   "account_note.placeholder": "Click to add note",
   "admin.dashboard.daily_retention": "User retention rate by day after sign-up",
@@ -456,8 +458,8 @@
   "onboarding.start.lead": "Your new Mastodon account is ready to go. Here's how you can make the most of it:",
   "onboarding.start.skip": "Want to skip right ahead?",
   "onboarding.start.title": "You've made it!",
-  "onboarding.steps.follow_people.body": "You curate your own feed. Lets fill it with interesting people.",
-  "onboarding.steps.follow_people.title": "Follow {count, plural, one {one person} other {# people}}",
+  "onboarding.steps.follow_people.body": "You curate your own home feed. Let's fill it with interesting people.",
+  "onboarding.steps.follow_people.title": "Find at least {count, plural, one {one person} other {# people}} to follow",
   "onboarding.steps.publish_status.body": "Say hello to the world.",
   "onboarding.steps.publish_status.title": "Make your first post",
   "onboarding.steps.setup_profile.body": "Others are more likely to interact with you with a filled out profile.",
