"edit" in english is translated "modifier", not "éditer"
"éditer" means "publish" in french.

--- a/app/javascript/mastodon/locales/fr.json
+++ b/app/javascript/mastodon/locales/fr.json
@@ -163,7 +163,7 @@
   "confirmations.discard_edit_media.message": "Vous avez des modifications non enregistrées de la description ou de l'aperçu du média, les supprimer quand même ?",
   "confirmations.domain_block.confirm": "Bloquer tout le domaine",
   "confirmations.domain_block.message": "Voulez-vous vraiment, vraiment bloquer {domain} en entier ? Dans la plupart des cas, quelques blocages ou masquages ciblés sont suffisants et préférables. Vous ne verrez plus de contenu provenant de ce domaine, ni dans vos fils publics, ni dans vos notifications. Vos abonné·e·s utilisant ce domaine seront retiré·e·s.",
-  "confirmations.edit.confirm": "Éditer",
+  "confirmations.edit.confirm": "Modifier",
   "confirmations.edit.message": "Modifier maintenant écrasera votre message en cours de rédaction. Voulez-vous vraiment continuer ?",
   "confirmations.logout.confirm": "Se déconnecter",
   "confirmations.logout.message": "Voulez-vous vraiment vous déconnecter ?",
@@ -350,7 +350,7 @@
   "lists.account.add": "Ajouter à la liste",
   "lists.account.remove": "Supprimer de la liste",
   "lists.delete": "Supprimer la liste",
-  "lists.edit": "Éditer la liste",
+  "lists.edit": "Modifier la liste",
   "lists.edit.submit": "Modifier le titre",
   "lists.new.create": "Ajouter une liste",
   "lists.new.title_placeholder": "Titre de la nouvelle liste",
@@ -587,8 +587,8 @@
   "status.detailed_status": "Vue détaillée de la conversation",
   "status.direct": "Mention privée @{name}",
   "status.direct_indicator": "Mention privée",
-  "status.edit": "Éditer",
-  "status.edited": "Édité le {date}",
+  "status.edit": "Modifier",
+  "status.edited": "Modifié le {date}",
   "status.edited_x_times": "Edité {count, plural, one {{count} fois} other {{count} fois}}",
   "status.embed": "Intégrer",
   "status.favourite": "Ajouter aux favoris",
